# driftscan

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  TODO  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  sphinx.yml
cylsim/: beamtransfer.py  blockla.py  cmutelescope.py  coord.py  cosmology_de.py  cylinder.py  disharray.py  doublekl.py  exotic_cylinder.py  focalplane.py  gmrt.py  hputil.py  kltransform.py  loadbeam.py  mpiutil.py  plotutil.py  projection.py  psestimation.py  psmc.py  restrictedcylinder.py  skymodel.py  skysim.py  telescope.py  util.py  visibility.py
cylsim/data/: fetchdata.sh
cylsim/tests/: test_blockla.py  test_hputil.py
doc/: Makefile  beamtransfer.rst  conf.py  index.rst  overview.rst  requirements.txt
doc/_autosummary/: drift.core.beamtransfer.rst  drift.core.crosspower.rst  drift.core.kltransform.rst  drift.core.manager.rst  drift.core.psestimation.rst  drift.core.psmc.rst  drift.core.rst  drift.core.skymodel.rst  drift.core.telescope.rst  drift.pipeline.pipeline.rst  drift.pipeline.rst  drift.pipeline.timestream.rst  drift.scripts.rst  drift.telescope.cylbeam.rst  drift.telescope.cylinder.rst  drift.telescope.disharray.rst  drift.telescope.exotic_cylinder.rst  drift.telescope.focalplane.rst  drift.telescope.gmrt.rst  drift.telescope.oldcylinder.rst  drift.telescope.restrictedcylinder.rst  drift.telescope.rst  drift.util.blockla.rst  drift.util.plotutil.rst  drift.util.util.rst
doc/source/: conf.py  index.rst
docs/: .buildinfo  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  reference.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  overview.doctree  reference.doctree
docs/_autosummary/: drift.core.beamtransfer.html  drift.core.crosspower.html  drift.core.doublekl.html  drift.core.html  drift.core.kltransform.html  drift.core.manager.html  drift.core.projection.html  drift.core.psestimation.html  drift.core.psmc.html  drift.core.skymodel.html  drift.core.telescope.html  drift.core.visibility.html  drift.pipeline.html  drift.pipeline.pipeline.html  (+15 more)
drift/: __init__.py  _version.py
latexnotes/: cyl.bib  mathdef.tex  notes.tex
scripts/: apply_gain.py  beammatrix_mpi.py  beammatrix_mpi_hdf5.py  chime_btcomb50.py  chime_fullbt.py  chime_ps.py  chime_ps_0.py  cmupstest.py  cmuspec.py  cmutest.py  cylinder_example.py  drift-makeproducts  drift-runpipeline  fptest.py  get_evals.py  interactive.py  job_t2gen.sh  job_t2spec.sh  kltest.py  klvis.py  loadbeam.py  m_order.py  make_products.py  makecov.py  makecov2.py  makecov_mpi.py  makecov_pol.py  mk_beamproj.py  mk_klfilter.py  mk_parsonsfilter.py  mk_proj3d.py  mk_sky_galaxy.py  mk_sky_noise.py  mk_timeseries.py  mk_timestream.py  mkjob_bt50.py  mkjob_simulate.py  mpitest.py  newtest.py  newtest2.py  (+22 more)
tests/: README.rst  fetchproducts.sh  pushproducts.sh  test_blockla.py  test_functional.py  test_functional_skip.py  test_simplepolarizationtelescope.py  testparams.yaml  testskipparams.yaml  updateproducts.sh
(+121 files in other folders)
