[build-system]
requires = ['setuptools', 'wheel', 'Cython', 'oldest-supported-numpy']

[tool.ruff]
# Enable pycodestyle ('E'), pydocstyle ('D'), pyflakes ('F')
select = ["E", "D", "F"]

# E203, W503
ignore = [
    "E501", # E501: line length violations. Enforce these with `black`
    "E741", # E741: Ambiguous variable name
    "D105", # D105: Missing docstring in magic method
    "D107", # D107: Missing docstring in init
    "D203", # D203: 1 blank line required before class docstring
    "D213", # D213: Multi-line docstring summary should start at the second line
    "D400", # D400: First line should end with a period (only ignoring this because there's another error that catches the same thing)
    "D401", # D401: First line should be in imperative mood
    "D402", # D402: First line should not be the function’s “signature”
    "D413", # D413: Missing blank line after last section
    "D416", # D416: Section name should end with a colon
]

# Ignore the following directories
exclude = [
    ".git",
    ".github",
    "build",
    "doc",
    "tests",
    "setup.py",
    "versioneer.py",
]

target-version = "py311"
